# podaac

./: .gitignore  Cargo.toml
podaac/: Cargo.toml  foo.rs
podaac/examples/: foo.rs
podaac/src/: error.rs  lib.rs
podaac/src/models/: dataset.rs  mod.rs  variable.rs
podaac_cpp/: Cargo.toml  main.cpp  podaac_cpp.h  setup.sh
podaac_py/: Cargo.toml  main.py  setup.sh
podaac_py/src/: lib.rs
