[package]
name = "podaac"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
bytes = "1.0"
dict_derive = { version = "0.4.0", optional = true }
pyo3 = { version = "0.14.5", features = ["macros"], optional = true }

[features]
default = []
python = ["pyo3", "dict_derive"]

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }
