[package]
name = "podaac_py"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
podaac = { path = "../podaac", features = ["python"] }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module", "auto-initialize"]
